--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "json-server-deploy",
+  "name": "property-management-api",
   "version": "1.0.0",
-  "description": "Simple json database to deploy to the host of your choice",
+  "description": "JSON Server for Property Management App",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [
-    "json-server,heroku, node, REST API"
-  ],
-  "author": "Jesper Orb",
+  "keywords": ["json-server", "api", "property-management"],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.4"
   }
 }
